src/utils/promql/PromQLParser.ts
// Generated from src/utils/promql/PromQL.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN.js";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer.js";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException.js";
import { NotNull } from "antlr4ts/Decorators.js";
import { NoViableAltException } from "antlr4ts/NoViableAltException.js";
import { Override } from "antlr4ts/Decorators.js";
import { Parser } from "antlr4ts/Parser.js";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext.js";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator.js";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener.js";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor.js";
import { RecognitionException } from "antlr4ts/RecognitionException.js";
import { RuleContext } from "antlr4ts/RuleContext.js";
//import { RuleVersion } from "antlr4ts/RuleVersion.js";
import { TerminalNode } from "antlr4ts/tree/TerminalNode.js";
import { Token } from "antlr4ts/Token.js";
import { TokenStream } from "antlr4ts/TokenStream.js";
import { Vocabulary } from "antlr4ts/Vocabulary.js";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl.js";

import * as Utils from "antlr4ts/misc/Utils.js";

import { PromQLListener } from "./PromQLListener.js";
import { PromQLVisitor } from "./PromQLVisitor.js";


export class PromQLParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly AGGREGATE_OP = 9;
	public static readonly BY = 10;
	public static readonly WITHOUT = 11;
	public static readonly ON = 12;
	public static readonly IGNORING = 13;
	public static readonly GROUP_LEFT = 14;
	public static readonly GROUP_RIGHT = 15;
	public static readonly OFFSET = 16;
	public static readonly BOOL = 17;
	public static readonly LAND = 18;
	public static readonly LOR = 19;
	public static readonly LUNLESS = 20;
	public static readonly AT = 21;
	public static readonly START = 22;
	public static readonly END = 23;
	public static readonly EQL = 24;
	public static readonly NEQ = 25;
	public static readonly EQL_REGEX = 26;
	public static readonly NEQ_REGEX = 27;
	public static readonly ASSIGN = 28;
	public static readonly GTE = 29;
	public static readonly LTE = 30;
	public static readonly GTR = 31;
	public static readonly LSS = 32;
	public static readonly ADD = 33;
	public static readonly SUB = 34;
	public static readonly MUL = 35;
	public static readonly DIV = 36;
	public static readonly MOD = 37;
	public static readonly POW = 38;
	public static readonly IDENTIFIER = 39;
	public static readonly NUMBER = 40;
	public static readonly DURATION = 41;
	public static readonly STRING = 42;
	public static readonly WS = 43;
	public static readonly RULE_expression = 0;
	public static readonly RULE_expr = 1;
	public static readonly RULE_bin_modifier = 2;
	public static readonly RULE_aggregate_expr = 3;
	public static readonly RULE_aggregate_modifier = 4;
	public static readonly RULE_label_list = 5;
	public static readonly RULE_function_call = 6;
	public static readonly RULE_arg_list = 7;
	public static readonly RULE_paren_expr = 8;
	public static readonly RULE_vector_selector = 9;
	public static readonly RULE_label_matchers = 10;
	public static readonly RULE_label_match_list = 11;
	public static readonly RULE_label_matcher = 12;
	public static readonly RULE_number_literal = 13;
	public static readonly RULE_string_literal = 14;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"expression", "expr", "bin_modifier", "aggregate_expr", "aggregate_modifier", 
		"label_list", "function_call", "arg_list", "paren_expr", "vector_selector", 
		"label_matchers", "label_match_list", "label_matcher", "number_literal", 
		"string_literal",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'['", "']'", "':'", "'('", "')'", "','", "'{'", "'}'", undefined, 
		"'by'", "'without'", "'on'", "'ignoring'", "'group_left'", "'group_right'", 
		"'offset'", "'bool'", "'and'", "'or'", "'unless'", "'@'", "'start()'", 
		"'end()'", "'=='", "'!='", "'=~'", "'!~'", "'='", "'>='", "'<='", "'>'", 
		"'<'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "AGGREGATE_OP", "BY", "WITHOUT", "ON", "IGNORING", 
		"GROUP_LEFT", "GROUP_RIGHT", "OFFSET", "BOOL", "LAND", "LOR", "LUNLESS", 
		"AT", "START", "END", "EQL", "NEQ", "EQL_REGEX", "NEQ_REGEX", "ASSIGN", 
		"GTE", "LTE", "GTR", "LSS", "ADD", "SUB", "MUL", "DIV", "MOD", "POW", 
		"IDENTIFIER", "NUMBER", "DURATION", "STRING", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PromQLParser._LITERAL_NAMES, PromQLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PromQLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "PromQL.g4"; }

	// @Override
	public get ruleNames(): string[] { return PromQLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PromQLParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PromQLParser._ATN, this);
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PromQLParser.RULE_expression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 30;
			this.expr(0);
			this.state = 31;
			this.match(PromQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExprContext = new ExprContext(this._ctx, _parentState);
		let _prevctx: ExprContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, PromQLParser.RULE_expr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 45;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				{
				this.state = 34;
				this.paren_expr();
				}
				break;

			case 2:
				{
				this.state = 35;
				this.number_literal();
				}
				break;

			case 3:
				{
				this.state = 36;
				this.string_literal();
				}
				break;

			case 4:
				{
				this.state = 37;
				this.aggregate_expr();
				}
				break;

			case 5:
				{
				this.state = 38;
				this.function_call();
				}
				break;

			case 6:
				{
				this.state = 39;
				this.vector_selector();
				}
				break;

			case 7:
				{
				this.state = 40;
				this.match(PromQLParser.T__0);
				this.state = 41;
				this.match(PromQLParser.DURATION);
				this.state = 42;
				this.match(PromQLParser.T__1);
				}
				break;

			case 8:
				{
				this.state = 43;
				_la = this._input.LA(1);
				if (!(_la === PromQLParser.ADD || _la === PromQLParser.SUB)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 44;
				this.expr(7);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 124;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 15, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 122;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 14, this._ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 47;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 48;
						this.match(PromQLParser.POW);
						this.state = 50;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.BOOL) {
							{
							this.state = 49;
							this.match(PromQLParser.BOOL);
							}
						}

						this.state = 53;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.ON || _la === PromQLParser.IGNORING) {
							{
							this.state = 52;
							this.bin_modifier();
							}
						}

						this.state = 55;
						this.expr(6);
						}
						break;

					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 56;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 57;
						_la = this._input.LA(1);
						if (!(((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & ((1 << (PromQLParser.MUL - 35)) | (1 << (PromQLParser.DIV - 35)) | (1 << (PromQLParser.MOD - 35)))) !== 0))) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 59;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.BOOL) {
							{
							this.state = 58;
							this.match(PromQLParser.BOOL);
							}
						}

						this.state = 62;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.ON || _la === PromQLParser.IGNORING) {
							{
							this.state = 61;
							this.bin_modifier();
							}
						}

						this.state = 64;
						this.expr(6);
						}
						break;

					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 65;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 66;
						_la = this._input.LA(1);
						if (!(_la === PromQLParser.ADD || _la === PromQLParser.SUB)) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 68;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.BOOL) {
							{
							this.state = 67;
							this.match(PromQLParser.BOOL);
							}
						}

						this.state = 71;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.ON || _la === PromQLParser.IGNORING) {
							{
							this.state = 70;
							this.bin_modifier();
							}
						}

						this.state = 73;
						this.expr(5);
						}
						break;

					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 74;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 75;
						_la = this._input.LA(1);
						if (!(((((_la - 24)) & ~0x1F) === 0 && ((1 << (_la - 24)) & ((1 << (PromQLParser.EQL - 24)) | (1 << (PromQLParser.NEQ - 24)) | (1 << (PromQLParser.GTE - 24)) | (1 << (PromQLParser.LTE - 24)) | (1 << (PromQLParser.GTR - 24)) | (1 << (PromQLParser.LSS - 24)))) !== 0))) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 77;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.BOOL) {
							{
							this.state = 76;
							this.match(PromQLParser.BOOL);
							}
						}

						this.state = 80;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.ON || _la === PromQLParser.IGNORING) {
							{
							this.state = 79;
							this.bin_modifier();
							}
						}

						this.state = 82;
						this.expr(4);
						}
						break;

					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 83;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 84;
						_la = this._input.LA(1);
						if (!(_la === PromQLParser.LAND || _la === PromQLParser.LUNLESS)) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 86;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.BOOL) {
							{
							this.state = 85;
							this.match(PromQLParser.BOOL);
							}
						}

						this.state = 89;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.ON || _la === PromQLParser.IGNORING) {
							{
							this.state = 88;
							this.bin_modifier();
							}
						}

						this.state = 91;
						this.expr(3);
						}
						break;

					case 6:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 92;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 93;
						this.match(PromQLParser.LOR);
						this.state = 95;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.BOOL) {
							{
							this.state = 94;
							this.match(PromQLParser.BOOL);
							}
						}

						this.state = 98;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.ON || _la === PromQLParser.IGNORING) {
							{
							this.state = 97;
							this.bin_modifier();
							}
						}

						this.state = 100;
						this.expr(2);
						}
						break;

					case 7:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 101;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 102;
						this.match(PromQLParser.T__0);
						this.state = 103;
						this.match(PromQLParser.DURATION);
						this.state = 104;
						this.match(PromQLParser.T__1);
						}
						break;

					case 8:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 105;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 106;
						this.match(PromQLParser.T__0);
						this.state = 107;
						this.match(PromQLParser.DURATION);
						this.state = 108;
						this.match(PromQLParser.T__2);
						this.state = 110;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === PromQLParser.DURATION) {
							{
							this.state = 109;
							this.match(PromQLParser.DURATION);
							}
						}

						this.state = 112;
						this.match(PromQLParser.T__1);
						}
						break;

					case 9:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 113;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 114;
						this.match(PromQLParser.OFFSET);
						this.state = 115;
						_la = this._input.LA(1);
						if (!(_la === PromQLParser.NUMBER || _la === PromQLParser.DURATION)) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						}
						break;

					case 10:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 116;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 117;
						this.match(PromQLParser.AT);
						this.state = 118;
						this.match(PromQLParser.NUMBER);
						}
						break;

					case 11:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, PromQLParser.RULE_expr);
						this.state = 119;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 120;
						this.match(PromQLParser.AT);
						this.state = 121;
						_la = this._input.LA(1);
						if (!(_la === PromQLParser.START || _la === PromQLParser.END)) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						}
						break;
					}
					}
				}
				this.state = 126;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 15, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public bin_modifier(): Bin_modifierContext {
		let _localctx: Bin_modifierContext = new Bin_modifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PromQLParser.RULE_bin_modifier);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			_la = this._input.LA(1);
			if (!(_la === PromQLParser.ON || _la === PromQLParser.IGNORING)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 128;
			this.match(PromQLParser.T__3);
			this.state = 129;
			this.label_list();
			this.state = 130;
			this.match(PromQLParser.T__4);
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PromQLParser.GROUP_LEFT || _la === PromQLParser.GROUP_RIGHT) {
				{
				this.state = 131;
				_la = this._input.LA(1);
				if (!(_la === PromQLParser.GROUP_LEFT || _la === PromQLParser.GROUP_RIGHT)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
			}

			this.state = 138;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 17, this._ctx) ) {
			case 1:
				{
				this.state = 134;
				this.match(PromQLParser.T__3);
				this.state = 135;
				this.label_list();
				this.state = 136;
				this.match(PromQLParser.T__4);
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public aggregate_expr(): Aggregate_exprContext {
		let _localctx: Aggregate_exprContext = new Aggregate_exprContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PromQLParser.RULE_aggregate_expr);
		let _la: number;
		try {
			this.state = 158;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 22, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 140;
				this.match(PromQLParser.AGGREGATE_OP);
				this.state = 142;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PromQLParser.BY || _la === PromQLParser.WITHOUT) {
					{
					this.state = 141;
					this.aggregate_modifier();
					}
				}

				this.state = 144;
				this.match(PromQLParser.T__3);
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PromQLParser.T__0) | (1 << PromQLParser.T__3) | (1 << PromQLParser.T__6) | (1 << PromQLParser.AGGREGATE_OP))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (PromQLParser.ADD - 33)) | (1 << (PromQLParser.SUB - 33)) | (1 << (PromQLParser.IDENTIFIER - 33)) | (1 << (PromQLParser.NUMBER - 33)) | (1 << (PromQLParser.STRING - 33)))) !== 0)) {
					{
					this.state = 145;
					this.arg_list();
					}
				}

				this.state = 148;
				this.match(PromQLParser.T__4);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 149;
				this.match(PromQLParser.AGGREGATE_OP);
				this.state = 150;
				this.match(PromQLParser.T__3);
				this.state = 152;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PromQLParser.T__0) | (1 << PromQLParser.T__3) | (1 << PromQLParser.T__6) | (1 << PromQLParser.AGGREGATE_OP))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (PromQLParser.ADD - 33)) | (1 << (PromQLParser.SUB - 33)) | (1 << (PromQLParser.IDENTIFIER - 33)) | (1 << (PromQLParser.NUMBER - 33)) | (1 << (PromQLParser.STRING - 33)))) !== 0)) {
					{
					this.state = 151;
					this.arg_list();
					}
				}

				this.state = 154;
				this.match(PromQLParser.T__4);
				this.state = 156;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 21, this._ctx) ) {
				case 1:
					{
					this.state = 155;
					this.aggregate_modifier();
					}
					break;
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public aggregate_modifier(): Aggregate_modifierContext {
		let _localctx: Aggregate_modifierContext = new Aggregate_modifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PromQLParser.RULE_aggregate_modifier);
		try {
			this.state = 170;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PromQLParser.BY:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 160;
				this.match(PromQLParser.BY);
				this.state = 161;
				this.match(PromQLParser.T__3);
				this.state = 162;
				this.label_list();
				this.state = 163;
				this.match(PromQLParser.T__4);
				}
				break;
			case PromQLParser.WITHOUT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 165;
				this.match(PromQLParser.WITHOUT);
				this.state = 166;
				this.match(PromQLParser.T__3);
				this.state = 167;
				this.label_list();
				this.state = 168;
				this.match(PromQLParser.T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public label_list(): Label_listContext {
		let _localctx: Label_listContext = new Label_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PromQLParser.RULE_label_list);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 172;
			this.match(PromQLParser.IDENTIFIER);
			this.state = 177;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PromQLParser.T__5) {
				{
				{
				this.state = 173;
				this.match(PromQLParser.T__5);
				this.state = 174;
				this.match(PromQLParser.IDENTIFIER);
				}
				}
				this.state = 179;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_call(): Function_callContext {
		let _localctx: Function_callContext = new Function_callContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PromQLParser.RULE_function_call);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this.match(PromQLParser.IDENTIFIER);
			this.state = 181;
			this.match(PromQLParser.T__3);
			this.state = 183;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PromQLParser.T__0) | (1 << PromQLParser.T__3) | (1 << PromQLParser.T__6) | (1 << PromQLParser.AGGREGATE_OP))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (PromQLParser.ADD - 33)) | (1 << (PromQLParser.SUB - 33)) | (1 << (PromQLParser.IDENTIFIER - 33)) | (1 << (PromQLParser.NUMBER - 33)) | (1 << (PromQLParser.STRING - 33)))) !== 0)) {
				{
				this.state = 182;
				this.arg_list();
				}
			}
